--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
         "sort-packages": true
     },
     "require": {
-        "php": "~7.3.0||~7.4.0",
-        "magento/framework": "103.0.*",
-        "magento/module-checkout": "100.4.*",
-        "magento/module-payment": "100.4.*",
-        "magento/module-store": "101.1.*"
+        "php": "~7.1.3||~7.2.0||~7.3.0",
+        "magento/framework": "102.0.*",
+        "magento/module-checkout": "100.3.*",
+        "magento/module-payment": "100.3.*",
+        "magento/module-store": "101.0.*"
     },
     "type": "magento2-module",
     "license": [
@@ -24,5 +24,5 @@
             "Magento\\CardinalCommerce\\": ""
         }
     },
-    "version": "100.4.0"
+    "version": "100.3.0"
 }
