--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,15 @@
 {
     "name": "magenxcommerce/module-cardinal-commerce",
     "description": "Provides a possibility to enable 3-D Secure 2.0 support for payment methods.",
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "config": {
         "sort-packages": true
     },
+    "version": "100.3.2",
     "require": {
         "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
@@ -11,11 +17,6 @@
         "magento/module-payment": "100.3.*",
         "magento/module-store": "101.0.*"
     },
-    "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -23,6 +24,5 @@
         "psr-4": {
             "Magento\\CardinalCommerce\\": ""
         }
-    },
-    "version": "100.3.2"
+    }
 }
